Code cleanup of unused functions and tests